# rsagents

./: Cargo.toml  Rocket.toml
src/: api.rs  error.rs  html.rs  lib.rs  main.rs  manager.rs  models.rs  persistent.rs  routers.rs
src/controllers/: agents.rs  mod.rs
templates/: agents.html.tera  base.html.tera  dynamic.html.tera
