[package]
name = "rsagents"
version = "0.3.0"
authors = ["Jeff Li <lijinfeng01@inspur.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
